--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "fresh-mint",
     "version": "0.1.0",
-    "description": "JOYclub extension",
+    "description": "Linux Mint setup helper",
     "license": "MIT",
     "author": {
         "name": "Jaid",
@@ -12,6 +12,9 @@
         "> 0.5%",
         "not ie >=9"
     ],
+    "babel": {
+        "extends": "./config/babel.js"
+    },
     "eslintConfig": {
         "extends": "./config/eslint.js"
     },
@@ -27,11 +30,15 @@
         "babel-loader": "^8.0.0-beta.2",
         "babel-plugin-lodash": "^3.3.2",
         "babel-preset-minify": "0.4",
+        "ejs-compiled-loader": "^1.1.0",
         "eslint": "^4.18.2",
         "eslint-plugin-optimize-regex": "^1.1.5",
         "eslint-plugin-promise": "^3.7.0",
+        "eslint-plugin-react": "^7.7.0",
         "html-loader": "^0.5.5",
+        "html-webpack-plugin": "^3.2.0",
         "lodash-webpack-plugin": "^0.11.5",
+        "nodemon": "^1.17.3",
         "react": "^16.3.2",
         "react-dom": "^16.3.2",
         "webpack": "^4.6.0",
@@ -45,6 +52,6 @@
     "scripts": {
         "build-prod": "NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
         "build-dev": "NODE_ENV=development ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
-        "run-dev": "NODE_ENV=development node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js"
+        "run-dev": "node_modules/.bin/nodemon --watch ./config/webpack.babel.js --exec \"node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js\""
     }
 }
