--- a/package.json
+++ b/package.json
@@ -30,25 +30,59 @@
         "babel-loader": "^8.0.0-beta.2",
         "babel-plugin-lodash": "^3.3.2",
         "babel-preset-minify": "0.4",
+        "bootswatch": "^4.1.1",
+        "css-loader": "^0.28.11",
+        "cssnano": "^3.10.0",
         "ejs-compiled-loader": "^1.1.0",
         "eslint": "^4.18.2",
         "eslint-plugin-optimize-regex": "^1.1.5",
         "eslint-plugin-promise": "^3.7.0",
         "eslint-plugin-react": "^7.7.0",
+        "file-loader": "^1.1.11",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "lodash-webpack-plugin": "^0.11.5",
+        "node-sass": "^4.9.0",
         "nodemon": "^1.17.3",
-        "react": "^16.3.2",
-        "react-dom": "^16.3.2",
+        "postcss-browser-reporter": "^0.5.0",
+        "postcss-cssnext": "^3.1.0",
+        "postcss-easings": "^1.0.1",
+        "postcss-flexbugs-fixes": "^3.3.1",
+        "postcss-import": "^11.1.0",
+        "postcss-loader": "^2.1.4",
+        "postcss-nested": "^3.0.0",
+        "postcss-sorting": "^3.1.0",
+        "punycode": "^2.1.0",
+        "sass-loader": "^7.0.1",
+        "scss-loader": "^0.0.1",
+        "style-loader": "^0.21.0",
+        "url-loader": "^1.0.1",
         "webpack": "^4.6.0",
         "webpack-cli": "^2.0.15",
-        "webpack-serve": "^0.3.1"
+        "webpack-dev-server": "^3.1.3",
+        "webpack-serve": "^0.3.1",
+        "yml-loader": "^2.1.0"
     },
     "dependencies": {
         "@babel/runtime": "^7.0.0-beta.46",
+        "any-shell-escape": "^0.1.1",
+        "bootstrap": "^4.1.1",
+        "classnames": "^2.2.5",
+        "highlight.js": "^9.12.0",
+        "jquery": "^3.3.1",
         "lodash": "^4.17.4",
-        "shell-escape-tag": "^1.1.0",
+        "mdbootstrap": "^4.5.1",
+        "mdbreact": "^4.3.0",
+        "popper.js": "^1.14.3",
+        "rc-switch": "^1.6.0",
+        "react": "^16.3.2",
+        "react-bootstrap-switch": "^15.5.3",
+        "react-bootstrap-toggle": "^2.3.1",
+        "react-dom": "^16.3.2",
+        "react-fast-highlight": "^2.2.0",
+        "react-jsonschema-form": "^1.0.3",
+        "react-switch": "^2.3.2",
+        "react-toggled": "^1.2.6",
         "url": "^0.11.0"
     },
     "scripts": {
