--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.0.0-beta.46",
+        "and": "^0.0.3",
         "any-shell-escape": "^0.1.1",
         "bootstrap": "^4.1.1",
         "classnames": "^2.2.5",
