--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "babel-preset-minify": "0.4",
         "css-loader": "^0.28.11",
         "cssnano": "^3.10.0",
+        "dist-size": "^0.4.0",
         "ejs-compiled-loader": "^1.1.0",
         "eslint": "^4.18.2",
         "eslint-plugin-optimize-regex": "^1.1.5",
@@ -56,6 +57,7 @@
         "style-loader": "^0.21.0",
         "url-loader": "^1.0.1",
         "webpack": "^4.6.0",
+        "webpack-bundle-analyzer": "^2.11.1",
         "webpack-cli": "^2.0.15",
         "webpack-serve": "^0.3.1",
         "yml-loader": "^2.1.0"
@@ -78,8 +80,11 @@
         "url": "^0.11.0"
     },
     "scripts": {
-        "build-prod": "NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
+        "build-prod": "rm --recursive --force build && NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
+        "profile-prod": "NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build --profile --json > webpackStats.json",
         "build-dev": "NODE_ENV=development ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
-        "run-dev": "node_modules/.bin/nodemon --watch config/webpack.babel.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js'"
+        "run-dev": "USE_WEBPACK_SERVE=true node_modules/.bin/nodemon --watch config/webpack.babel.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js'",
+        "dist-size": "yarn run build-prod && ./node_modules/.bin/dist-size build",
+        "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer webpackStats.json build"
     }
 }
