--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "postcss-sorting": "^3.1.0",
         "prop-types": "^15.6.1",
         "punycode": "^2.1.0",
+        "react-hot-loader": "^4.1.2",
         "sass-loader": "^7.0.1",
         "style-loader": "^0.21.0",
         "url-loader": "^1.0.1",
