--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "babel-loader": "^8.0.0-beta.2",
         "babel-plugin-lodash": "^3.3.2",
         "babel-preset-minify": "0.4",
+        "caniuse-lite": "^1.0.30000833",
         "css-loader": "^0.28.11",
         "cssnano": "^4.0.0-rc.2",
         "dist-size": "^0.4.0",
@@ -85,8 +86,8 @@
         "profile-prod": "NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build --profile --json > webpackStats.json",
         "build-dev": "NODE_ENV=development ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
         "start": "yarn run start-prod",
-        "start-prod": "USE_WEBPACK_SERVE=true node_modules/.bin/nodemon --watch config/webpack.babel.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --open --config config/webpack.babel.js'",
-        "start-dev": "USE_WEBPACK_SERVE=true node_modules/.bin/nodemon --watch config/webpack.babel.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --open --config config/webpack.babel.js'",
+        "start-prod": "NODE_ENV=production ./node_modules/.bin/webpack-serve --open --config config/webpack.babel.js",
+        "start-dev": "USE_WEBPACK_SERVE=true NODE_ENV=development node_modules/.bin/nodemon --watch config/webpack.babel.js --watch config/babel.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js'",
         "dist-size": "yarn run build-prod && ./node_modules/.bin/dist-size build",
         "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer webpackStats.json build"
     }
