--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "@babel/runtime": "^7.0.0-beta.46",
         "and": "^0.0.3",
         "any-shell-escape": "^0.1.1",
+        "bash-minifier": "^0.1.2",
         "bootstrap": "^4.1.1",
         "classnames": "^2.2.5",
         "highlight.js": "^9.12.0",
