--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "browserslist": [
         "> 0.5%",
-        "not ie >=9"
+        "not ie >=1"
     ],
     "babel": {
         "extends": "./config/babel.js"
@@ -58,6 +58,7 @@
         "sass-loader": "^7.0.1",
         "style-loader": "^0.21.0",
         "url-loader": "^1.0.1",
+        "webapp-webpack-plugin": "^2.0.3",
         "webpack": "^4.6.0",
         "webpack-bundle-analyzer": "^2.11.1",
         "webpack-cli": "^2.0.15",
@@ -84,12 +85,12 @@
     },
     "scripts": {
         "build-prod": "rm --recursive --force build && NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
-        "profile-prod": "NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build --profile --json > webpackStats.json",
+        "profile-prod": "NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build --profile --json > cache/webpackStats.json",
         "build-dev": "NODE_ENV=development ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
         "start": "yarn run start-prod",
         "start-prod": "NODE_ENV=production node --require @babel/register ./node_modules/.bin/webpack-serve --open --config config/webpack.babel.js",
         "start-dev": "USE_WEBPACK_SERVE=true NODE_ENV=development node_modules/.bin/nodemon --watch config/webpack.babel.js --watch config/babel.js --watch config/app.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js'",
         "dist-size": "yarn run build-prod && ./node_modules/.bin/dist-size build",
-        "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer webpackStats.json build"
+        "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer cache/webpackStats.json build"
     }
 }
