--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "license": "MIT",
     "author": {
         "name": "Jaid",
-        "url": "https://github.com/jaid",
+        "url": "https://github.com/Jaid",
         "email": "jaid.jsx@gmail.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Jaid/fresh-mint"
     },
     "browserslist": [
         "> 0.5%",
@@ -57,6 +61,7 @@
         "react-hot-loader": "^4.1.2",
         "sass-loader": "^7.0.1",
         "style-loader": "^0.21.0",
+        "surge": "^0.20.1",
         "url-loader": "^1.0.1",
         "webapp-webpack-plugin": "^2.0.3",
         "webpack": "^4.6.0",
@@ -91,6 +96,7 @@
         "start-prod": "NODE_ENV=production node --require @babel/register ./node_modules/.bin/webpack-serve --open --config config/webpack.babel.js",
         "start-dev": "USE_WEBPACK_SERVE=true NODE_ENV=development node_modules/.bin/nodemon --watch config/webpack.babel.js --watch config/babel.js --watch config/app.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js'",
         "dist-size": "yarn run build-prod && ./node_modules/.bin/dist-size build",
-        "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer cache/webpackStats.json build"
+        "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer cache/webpackStats.json build",
+        "publish": "yarn run build-prod && node_modules/.bin/surge build \"$npm_package_name.j4id.com\""
     }
 }
