--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
         "start-dev": "USE_WEBPACK_SERVE=true NODE_ENV=development node_modules/.bin/nodemon --watch config/webpack.babel.js --watch config/babel.js --watch config/app.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js'",
         "dist-size": "yarn run build-prod && ./node_modules/.bin/dist-size build",
         "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer cache/webpackStats.json build",
-        "publish": "yarn run build-prod && node_modules/.bin/surge build \"$npm_package_name.j4id.com\""
+        "publish": "yarn run build-prod && node_modules/.bin/surge build \"$npm_package_name.j4id.com\"",
+        "env": "printenv"
     }
 }
