--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "eslint-plugin-react": "^7.7.0",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
+        "image-webpack-loader": "^4.2.0",
         "lodash-webpack-plugin": "^0.11.5",
         "node-sass": "^4.9.0",
         "nodemon": "^1.17.3",
