Improved stylesheet handling and cleaned up a bit

--- a/src/data/installs.yml
+++ b/src/data/installs.yml
@@ -96,7 +96,7 @@
   title: Spotify
 
 - package: obs-studio
-  title: Open Broadcaster Software
+  title: OBS Studio
   ppa: obsproject/obs-studio
 
 - package: lmms
