--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
         "lodash-webpack-plugin": "^0.11.5",
         "node-sass": "^4.9.0",
         "nodemon": "^1.17.3",
-        "postcss-browser-reporter": "^0.5.0",
         "postcss-cssnext": "^3.1.0",
         "postcss-easings": "^1.0.1",
         "postcss-flexbugs-fixes": "^3.3.1",
         "postcss-import": "^11.1.0",
         "postcss-loader": "^2.1.4",
+        "postcss-modules": "^1.1.0",
         "postcss-nested": "^3.0.0",
         "postcss-sorting": "^3.1.0",
         "prop-types": "^15.6.1",
@@ -93,9 +93,10 @@
         "build-prod": "rm --recursive --force build && NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
         "profile-prod": "NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build --profile --json > cache/webpackStats.json",
         "build-dev": "NODE_ENV=development ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
-        "start": "yarn run start-prod",
+        "start": "yarn run start-prod-static",
         "start-prod": "NODE_ENV=production node --require @babel/register ./node_modules/.bin/webpack-serve --open --config config/webpack.babel.js",
-        "start-dev": "USE_WEBPACK_SERVE=true NODE_ENV=development node_modules/.bin/nodemon --watch config/webpack.babel.js --watch config/babel.js --watch config/app.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js'",
+        "start-prod-static": "yarn run build-prod && xdg-open build/index.html",
+        "start-dev": "USE_WEBPACK_SERVE=true NODE_ENV=development node_modules/.bin/nodemon --watch config/webpack.babel.js --watch config/babel.js --watch config/app.js --watch config/postcss.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js'",
         "dist-size": "yarn run build-prod && ./node_modules/.bin/dist-size build",
         "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer cache/webpackStats.json build",
         "env": "printenv"
