--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "lodash-webpack-plugin": "^0.11.5",
         "node-sass": "^4.9.0",
         "nodemon": "^1.17.3",
+        "postcss-center": "^1.1.0",
         "postcss-cssnext": "^3.1.0",
         "postcss-easings": "^1.0.1",
         "postcss-flexbugs-fixes": "^3.3.1",
@@ -56,6 +57,7 @@
         "postcss-loader": "^2.1.4",
         "postcss-modules": "^1.1.0",
         "postcss-nested": "^3.0.0",
+        "postcss-ordered-values": "^2.2.3",
         "postcss-sorting": "^3.1.0",
         "prop-types": "^15.6.1",
         "punycode": "^2.1.0",
