--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "eslint-plugin-optimize-regex": "^1.1.5",
         "eslint-plugin-promise": "^3.7.0",
         "eslint-plugin-react": "^7.7.0",
+        "faster.js": "^1.1.0",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
         "image-webpack-loader": "^4.2.0",
