--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "babel-plugin-lodash": "^3.3.2",
         "babel-preset-minify": "0.4",
         "caniuse-lite": "^1.0.30000833",
+        "cname-webpack-plugin": "^1.0.2",
         "css-loader": "^0.28.11",
         "cssnano": "^4.0.0-rc.2",
         "dist-size": "^0.4.0",
