--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ script:
 deploy:
   provider: pages
   local-dir: ./build/
-  fqdn: fresh-mint.j4id.com
+  fqdn: j4id.com
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
