--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "html-webpack-plugin": "^3.2.0",
         "image-webpack-loader": "^4.2.0",
         "lodash-webpack-plugin": "^0.11.5",
+        "moment": "^2.22.1",
         "node-sass": "^4.9.0",
         "nodemon": "^1.17.4",
         "postcss-center": "^1.1.0",
