--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "babel-eslint": "^8.2.3",
         "babel-loader": "^8.0.0-beta.2",
         "babel-plugin-lodash": "^3.3.2",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
         "babel-preset-minify": "0.4",
         "caniuse-lite": "^1.0.30000839",
         "cname-webpack-plugin": "^1.0.2",
