--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
         "start-dev": "USE_WEBPACK_SERVE=true NODE_ENV=development node_modules/.bin/nodemon --watch config/webpack.babel.js --watch config/babel.js --watch config/app.js --watch config/postcss.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js'",
         "dist-size": "yarn run build-prod && ./node_modules/.bin/dist-size build",
         "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer cache/webpackStats.json build",
+        "fix": "./node_modules/.bin/eslint --fix --ext .jsx,.js src",
         "env": "printenv"
     }
 }
