--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "html-webpack-plugin": "^3.2.0",
         "image-webpack-loader": "^4.2.0",
         "lodash-webpack-plugin": "^0.11.5",
+        "mkdirp": "^0.5.1",
         "moment": "^2.22.1",
         "node-sass": "^4.9.0",
         "nodemon": "^1.17.4",
@@ -93,14 +94,14 @@
     },
     "scripts": {
         "build-prod": "rm --recursive --force build && NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
-        "profile-prod": "NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build --profile --json > cache/webpackStats.json",
+        "profile-prod": "./node_modules/.bin/mkdirp cache/webpack && NODE_ENV=production ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build --profile --json > cache/webpack/stats.json",
         "build-dev": "NODE_ENV=development ./node_modules/.bin/webpack --config config/webpack.babel.js --output-path build",
         "start": "yarn run start-prod-static",
         "start-prod": "NODE_ENV=production node --require @babel/register ./node_modules/.bin/webpack-serve --open --config config/webpack.babel.js",
         "start-prod-static": "yarn run build-prod && xdg-open build/index.html",
         "start-dev": "USE_WEBPACK_SERVE=true NODE_ENV=development node_modules/.bin/nodemon --watch config/webpack.babel.js --watch config/babel.js --watch config/app.js --watch config/postcss.js --watch yarn.lock --exec 'node --require @babel/register ./node_modules/.bin/webpack-serve --config config/webpack.babel.js'",
         "dist-size": "yarn run build-prod && ./node_modules/.bin/dist-size build",
-        "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer cache/webpackStats.json build",
+        "bundle-size": "yarn run profile-prod && ./node_modules/.bin/webpack-bundle-analyzer cache/webpack/stats.json build",
         "fix": "./node_modules/.bin/eslint --fix --ext .jsx,.js src",
         "env": "printenv"
     }
