--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "babel-plugin-lodash": "^3.3.2",
         "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
         "babel-preset-minify": "0.4",
+        "base-x": "^3.0.4",
         "caniuse-lite": "^1.0.30000839",
         "cname-webpack-plugin": "^1.0.2",
         "css-loader": "^0.28.11",
@@ -48,6 +49,7 @@
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
         "image-webpack-loader": "^4.2.0",
+        "jsonpack": "^1.1.5",
         "lodash-webpack-plugin": "^0.11.5",
         "mkdirp": "^0.5.1",
         "moment": "^2.22.1",
@@ -84,12 +86,16 @@
         "classnames": "^2.2.5",
         "highlight.js": "^9.12.0",
         "lodash": "^4.17.10",
+        "msgpack5": "^4.2.0",
+        "pako": "^1.0.6",
         "react": "^16.3.2",
+        "react-copy-to-clipboard": "^5.0.1",
         "react-dom": "^16.3.2",
         "react-fast-highlight": "^2.2.0",
         "react-ga": "^2.5.0",
         "react-jsonschema-form": "^1.0.3",
         "react-switch": "^2.3.2",
+        "react-toastify": "^4.0.1",
         "url": "^0.11.0"
     },
     "scripts": {
